fix height, covering the tabs

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -3,7 +3,7 @@
   top: 50px;
   left: 50px;
   width: 1024px;
-  height: 768px;
+  height: 650px;
   background: #FFFFFF;
   border: 3px solid #808080;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
